# XFluids

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.ACPP.apk  CMakeLists.txt.oneAPI.apk  Euler-SYCL.code-workspace  Installation-script.md  Makefile  README.en.md  README.md  block_sycl.cpp  block_sycl.h  device_func.h  fluid_sycl.cpp  fun.h  global_class.h  global_function.cpp  global_function.h  launch.sh  main.cpp  run_build_Xfluids_ACPP_scaleX.sh  run_fp64.sh  run_install_AdaptiveCpp.sh  run_install_oneAPI.sh  run_load_env_scaleX.sh  sa-1d-diffusion-mpi.json  sa-1d-guss-wave.ini  sa-1d-reactive-shock-tube.ini  sa-1d-reactive-st-mpi.ini  sa-1d-reactive-st.ini  sa-1d-shock-tube-mpi.ini  sa-1d-shock-tube.ini  sa-2D-RSBI-mpi-2x2.ini  sa-2D-RSBI-mpi-4x2.ini  sa-2D-RSBI-mpi-4x4.ini  sa-2D-RSBI-mpi-8x4.ini  sa-2D-RSBI-mpi-8x8.ini  sa-2d-expanded-jet.ini  sa-2d-riemann-case3.ini  sa-3D-RSBI-mpi-2x2x1.ini  (+18 more)
mpiUtils/: CMakeLists.txt  ErrorPolling.cpp  ErrorPolling.h  MpiCommCart.cpp  MpiCommCart.h  TestForException.h  common_config.h
src/: CMakeLists.txt  Fluids.cpp  LAMNSS.cpp  Utils_kernels.hpp  XFLUIDS.cpp  block_sycl.hpp  criterion.hpp  device_func.hpp  fluid_sycl.cpp  global_class.h  global_function.hpp  main.cpp  marco.h  schemes_device.hpp  sycl_blocks.hpp  sycl_devices.hpp  sycl_kernels.hpp  sycl_solver.cpp
src/Schemes/: UpWind_schemes.hpp  Utils_schemes.hpp  WENO6s_schemes.hpp  schemes_device.hpp
src/include/: CMakeLists.txt  compile_sycl.h  global_class.h  global_marco.h  global_setup.h  global_undef.h  marco.h  middle.hpp  sycl_devices.hpp  sycl_kernels.hpp
src/include/marcos/: marco_global.h  marco_thermal.h
src/mpiPacks/: CMakeLists.txt  mpiPacks.cpp  mpiPacks.h
src/read_grid/: CMakeLists.txt  Makefile  rae2822.xyz.ini  rae2822.xyz.json  readgrid.cpp  readgrid.h  setup.hhhh  test.cpp
src/read_ini/: CMakeLists.txt  criterion.hpp  fworkdir.hpp  global_setup_function.hpp  mixture.hpp  options.hpp  outvars.hpp  rangeset.hpp  setup_ini.cpp  setupini.h
src/read_ini/cantera/: CMakeLists.txt  XThermal.cpp  XThermal.h  cantera_interface.cpp  cantera_interface.h  example_utils.h  kinetics1.hpp
src/read_ini/config/: CMakeLists.txt  ConfigMap.cpp  ConfigMap.h
src/read_ini/config/inih/: CMakeLists.txt  INIReader.cpp  INIReader.h  ini.cpp  ini.h
src/read_ini/inishape/: CMakeLists.txt  inishape.cpp  inishape.h
src/read_ini/outformat/: CMakeLists.txt  criterion.hpp  outformat.cpp  outformat.h  outvars.hpp
src/read_ini/settings/: CMakeLists.txt  read_json.cpp  read_json.h
src/read_ini/src/: CMakeLists.txt  constructor.cpp  gpucopy.cpp  iniset.cpp  print.cpp  reaction.cpp  thermal.cpp  viscfit.cpp
src/read_ini/src/ndassign/: CMakeLists.txt  ndassign.cpp  ndassign.h
src/read_ini/src/outformat/: CMakeLists.txt  criterion.hpp  outformat.cpp  outvars.hpp
src/read_ini/src/wheels/: fworkdir.hpp  mixture.hpp  rangeset.hpp
src/read_ini/strsplit/: CMakeLists.txt  strsplit.h
src/sample/: ini_sample.template.hpp
src/sample/1D-X-Y-Z/diffusion/: ini_sample.hpp
src/sample/1D-X-Y-Z/for-debug/: ini_sample.hpp
src/sample/1D-X-Y-Z/guass-wave/: ini_sample.hpp
src/sample/1D-X-Y-Z/insert-st/: ini_sample.hpp
src/sample/for-debug/: ini_sample.hpp
src/sample/guass-wave/: ini_sample.hpp
src/sample/mixing-layer/: ini_sample.hpp
src/sample/not-compoent/: ini_sample.hpp
src/sample/read-grid/: ini_sample.hpp
src/sample/sharp-interface/: ini_sample.hpp
src/sample/shock-bubble-intera/: ini_sample.hpp
src/sample/under-expanded-jet/: ini_sample.hpp
src/settings/: CMakeLists.txt  read_json.cpp  read_json.h
src/solver_BCs/: BCs_block.cpp  BCs_block.h  BCs_block.hpp  BCs_kernels.hpp  CMakeLists.txt
src/solver_GetDt/: GlobalDt_block.hpp
src/solver_Ini/: CMakeLists.txt  Ini_block.cpp  Ini_block.h  Ini_block.hpp  Mixing_device.h  Mixing_device.hpp  Thermo_device.h  Thermo_device.hpp
src/solver_Ini/sample/: ini_sample.hpp
src/solver_Reaction/: CMakeLists.txt  ProductionRates.h  Reaction_block.hpp  Reaction_device.hpp  Reaction_kernels.hpp
src/solver_Reconstruction/: CMakeLists.txt  PositivityPreserving_kernels.hpp  Recon_device.hpp  Reconstruction_block.hpp
src/solver_Reconstruction/FDM_Method/: CMakeLists.txt  ConVenction_block.hpp  Reconstruction_kernels.hpp
src/solver_Reconstruction/FVM_Method/: CMakeLists.txt  ConVenction_block.hpp  Reconstruction_kernels.hpp
src/solver_Reconstruction/schemes/: CMakeLists.txt  TENOs_schemes.hpp  UpWind_schemes.hpp  Utils_schemes.hpp  WENO5s_schemes.hpp  WENO6s_schemes.hpp  WENO7s_schemes.hpp  WENOAOs_schemes.hpp  schemes_device.hpp
src/solver_Reconstruction/viscosity/: CMakeLists.txt  Visc_block.hpp  Visc_device.h  Visc_device.hpp  Visc_kernels.hpp
src/solver_UpdateStates/: CMakeLists.txt  Estimate_kernels.hpp  UpdateStates_block.cpp  UpdateStates_block.h  UpdateStates_block.hpp  Update_device.hpp  Update_kernels.cpp  Update_kernels.hpp
src/solver_Viscosity/: CMakeLists.txt  Flux_discrete.h  Visc_block.hpp  Visc_device.hpp  Visc_kernels.hpp
src/solver_Viscosity/Fourth_Order/: Visc_Order_kernels.hpp
src/solver_Viscosity/Second_Order/: Flux_discrete.h  Visc_Order_kernels.hpp
src/sycl_blocks/: BCs_block.hpp  CMakeLists.txt  ConVenction_block.hpp  GlobalDt_block.hpp  Ini_block.hpp  Reaction_block.hpp  UpdateStates_block.hpp  Utils_block.hpp  Visc_block.hpp  block_sycl.hpp
src/sycl_devices/: CMakeLists.txt  Eigen_device.hpp  Mixing_device.hpp  Reaction_device.hpp  Thermo_device.hpp  Update_device.hpp  Visc_device.hpp  device_func.hpp  schemes_device.hpp
src/sycl_devices/schemes/: LowOrder_schemes.hpp  TENOs_schemes.hpp  UpWind_schemes.hpp  Utils_schemes.hpp  WENO5s_schemes.hpp  WENO6s_schemes.hpp  WENO7s_schemes.hpp  WENOAOs_schemes.hpp  schemes_device.hpp
src/sycl_kernels/: BCs_kernels.hpp  Estimate_kernels.hpp  Reaction_kernels.hpp  Reconstruction_kernels.hpp  Update_kernels.hpp  Utils_kernels.hpp  Visc_kernels.hpp  sycl_kernels.hpp
src/timer/: CMakeLists.txt  timer.cpp
src/utils/: CMakeLists.txt  diskinfo.hpp
src/utils/atttribute/: CMakeLists.txt  attribute.cpp  attribute.h
(+161 files in other folders)
